[package]
name = "mipha"
version = "0.1.0"
authors = ["twocucao <twocucao@gmail.com>"]
edition = "2018"
description = "A Python wrapper for the Rust API for purposes of testing"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
py-spy = "0.3.3"
failure = "0.1.8"
remoteprocess = {version="0.3.4", features=["unwind"]}
actix-web = "3"
diesel = { version = "1.4.4", features = ["postgres"] }
dotenv = "0.15.0"
env_logger = "0.8.1"

[dev-dependencies]
actix-rt = "1"
