[package]
name = "mipha"
version = "0.1.0"
authors = ["twocucao <twocucao@gmail.com>"]
edition = "2018"
description = "A Python wrapper for the Rust API for purposes of testing"

[dependencies]
diesel = { version = "1.4.4", features = ["postgres", "chrono"] }
dotenv = "0.15.0"
env_logger = "0.8.1"
failure = "0.1.8"
futures = "0.3"
py-spy = "0.3.3"
remoteprocess = { version = "0.3.4", features = ["unwind"] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
rocket = "0.4.5"
rocket_contrib = { version = "0.4.5", features = ["json"] }
rocket_cors = { version = "0.5.1", default-features = false }
chrono = { version = "0.4.10", features = ["serde"] }
validator = "0.10.0"
validator_derive = "0.10.0"



