[tool.poetry]
name = "mipha"
version = "0.1.0"
description = ""
authors = ["twocucao <twocucao@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[tool.poetry.extras]
test = ["coverage", "pytest"]


#[build-system]
#requires = ["poetry>=0.12"]
#build-backend = "poetry.masonry.api"

[build-system]
requires = ["maturin"]
build-backend = "maturin"

[tool.poetry.plugins] # Optional super table

[tool.poetry.plugins."blogtool.parsers"]
".rst" = "some_module:SomeClass"

#[tool.maturin]
#bindings = "cffi"
#manylinux = "off"

[tool.poetry.scripts]
mipha-cli = "archivist.main:main"

[tool.poetry.plugins."archivist.repo"]
git = "archivist.main:main"

#[tool.poetry.plugins."archivist.source"]
#crontab = "archivist.sources.crontab:Plugin"
#jenkins = "archivist.sources.jenkins:Plugin"
#packages = "archivist.sources.packages:Plugin"
#paths = "archivist.sources.paths:Plugin"
#
#[tool.poetry.plugins."archivist.notification"]
#email = "archivist.notifications.email:Plugin"
#stream = "archivist.notifications.stream:Plugin"
#
